# cradle-vcpkg-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
vcpkg/triplets/: x64-windows-mixed.cmake
